# trackerly-backend

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  commands.bat  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
alembic/: .Makefile  env.py
alembic/versions/: 67508bc19929_.py  dddceb6761a9_initial_migration.py  f506102b1f64_.py  f702b4799b99_.py
alembic/versions/backup/: 822460da3531_.py
backend/: food.py  main.py  models.py  schema.py
my_scripts/: load_tables.py  script.py
